--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ex_10_11_2022-2</title>
+    <title>HW13</title>
     <script type="module" src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h2>Homework 13:</h2>
+  </body>
 </html>
